# parser_kinopoisk

./: README.md  main.py  pyproject.toml
deco/: base_decorator.py
decorator/: decorator.py
settings/: __init__.py  config.example.py
utils/: fabric.py  req_to_api.py
